--- a/TP.vcxproj
+++ b/TP.vcxproj
@@ -152,17 +152,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Stack.cpp" />
-    <ClCompile Include="Stack1.cpp" />
-    <ClCompile Include="Stack2.cpp" />
-    <ClCompile Include="Stack3.cpp" />
+    <ClCompile Include="Integer.cpp" />
     <ClCompile Include="StackElement.cpp" />
     <ClCompile Include="TP.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stack.h" />
-    <ClInclude Include="Stack1.h" />
-    <ClInclude Include="Stack2.h" />
-    <ClInclude Include="Stack3.h" />
+    <ClInclude Include="Integer.h" />
     <ClInclude Include="StackElement.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
