--- a/TP.vcxproj
+++ b/TP.vcxproj
@@ -151,15 +151,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Stack.cpp" />
-    <ClCompile Include="Integer.cpp" />
-    <ClCompile Include="StackElement.cpp" />
+    <ClCompile Include="OctInterface.cpp" />
+    <ClCompile Include="List.cpp" />
+    <ClCompile Include="BinInterface.cpp" />
     <ClCompile Include="TP.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Stack.h" />
-    <ClInclude Include="Integer.h" />
-    <ClInclude Include="StackElement.h" />
+    <ClInclude Include="BinInterface.h" />
+    <ClInclude Include="OctInterface.h" />
+    <ClInclude Include="List.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
